extract functions and testing rates table

--- a/covidWarehouse/NAMESPACE
+++ b/covidWarehouse/NAMESPACE
@@ -2,5 +2,23 @@
 
 export(create_table_reference_geography)
 export(create_table_reference_homes)
+export(extract_incidents)
+export(get_monday_date)
+export(get_time_series)
+export(get_time_span)
+export(load_data)
+export(weekly_rate_tests)
+import(PostcodesioR)
+importFrom(dplyr,between)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
+importFrom(lubridate,"%m+%")
+importFrom(lubridate,"%m-%")
+importFrom(lubridate,days)
+importFrom(lubridate,wday)
 importFrom(magrittr,"%>%")
