--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: covidFSHC
 Title: Reporting on COVID-19 infections across Four Season's Health Care 
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Authors@R: c(
+    person(given = "Peter",
+           family = "Dutey-Magni",
+           role = c("aut", "cre", "res"),
+           email = "p.dutey-magni@ucl.ac.uk",
+           comment = c(ORCID = "0000-0002-8942-9836")),
+    person(given = "Laura",
+           family = "Shallcross",
+           role = c("rth"),
+           email = "l.shallcross@ucl.ac.uk",
+           comment = c(ORCID = "0000-0003-1713-2555")),
+    person("University College London", role = c("cph")))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
@@ -19,5 +25,8 @@ Imports:
     magrittr,
     RSQLite,
     DBI,
-    dbplyr
+    dbplyr,
+    lubridate
 RoxygenNote: 7.0.2
+Suggests: 
+    testthat (>= 2.1.0)
