add case classification and vignette

--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -26,7 +26,12 @@ Imports:
     RSQLite,
     DBI,
     dbplyr,
-    lubridate
+    lubridate,
+    DiagrammeR,
+    summarytools
 RoxygenNote: 7.0.2
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
