add care home level counts

--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     dbplyr,
     lubridate,
     DiagrammeR,
-    summarytools
+    summarytools,
+    data.table
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
