--- a/covidWarehouse/NAMESPACE
+++ b/covidWarehouse/NAMESPACE
@@ -7,7 +7,9 @@ export(get_monday_date)
 export(get_time_series)
 export(get_time_span)
 export(load_data)
-export(weekly_rate_tests)
+export(min_non_missing)
+export(table_weekly_rate_tests)
+export(weekly_deduplicated_cases)
 import(PostcodesioR)
 importFrom(dplyr,between)
 importFrom(dplyr,filter)
