--- a/covidWarehouse/NAMESPACE
+++ b/covidWarehouse/NAMESPACE
@@ -3,11 +3,14 @@
 export(create_table_reference_geography)
 export(create_table_reference_homes)
 export(extract_incidents)
+export(funnel_outlier)
+export(funnel_poisson_control_limits)
 export(get_monday_date)
 export(get_time_series)
 export(get_time_span)
 export(load_data)
 export(min_non_missing)
+export(plot_funnel)
 export(table_weekly_rate_tests)
 export(weekly_deduplicated_cases)
 import(PostcodesioR)
