rework resident-days - weekly occupancy now multiplied by 7 during extraction - create resident timelines - create approximated resident-days from resident timelines - update validation document - refactored resident_id on incidents and residents

--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -31,7 +31,9 @@ Imports:
     summarytools,
     data.table,
     rlang,
-    scales
+    scales,
+    purrr,
+    usethis
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
