--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -33,7 +33,9 @@ Imports:
     rlang,
     scales,
     purrr,
-    usethis
+    usethis,
+    survival,
+    survminer
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
