setting max_date back to 2020-06-07

--- a/covidWarehouse/NAMESPACE
+++ b/covidWarehouse/NAMESPACE
@@ -8,6 +8,7 @@ export(funnel_poisson_control_limits)
 export(get_monday_date)
 export(get_time_series)
 export(get_time_span)
+export(km_ct_estimator)
 export(load_data)
 export(min_non_missing)
 export(plot_funnel)
