--- a/covidWarehouse/DESCRIPTION
+++ b/covidWarehouse/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     purrr,
     usethis,
     survival,
-    survminer
+    survminer,
+    epitools
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
