add index of multiple deprivation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(table_weekly_rate_tests)
 export(total_cases_in_home)
 export(weekly_deduplicated_cases)
 import(PostcodesioR)
+import(SPARQL)
 importFrom(dplyr,between)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
